--- a/index.hbs
+++ b/index.hbs
@@ -1,5 +1,12 @@
 {{!< default}}
 
+<header class="main-header">
+  <div class="main-header-content inner">
+    <h1 class="page-title">{{@blog.title}}</h1>
+    <h2 class="page-description">{{@blog.description}}</h2>
+  </div>
+</header>
+
 <main id="content" class="content" role="main">
 
   {{> loop}}
