Extend hr elements across entire page

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -25,7 +25,10 @@ h6 {
 }
 
 hr {
-  height: 2px;
+  position: relative;
+  left: -12.5%;
+  height: 1px;
+  width: 125%;
   background-color: #8fbeda;
   border: 0;
 }
