--- a/default.hbs
+++ b/default.hbs
@@ -40,11 +40,13 @@
 
       {{{body}}}
 
-      <footer class="site-footer">
+      <hr>
+
+      <footer class="site-footer clearfix">
         <section class="copyright">
           <a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}
         </section>
-        <section class="poweredby">
+        <section class="powered-by">
           Proudly published with <a href="https://ghost.org">Ghost</a>
         </section>
       </footer>
