--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -24,14 +24,18 @@ hr {
 }
 
 a {
-  color: #009d9e;
+  color: #8fbeda;
+  font-weight: bold;
+  border-bottom: 1px solid #8fbeda;
   text-decoration: inherit;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  transition: color 0.3s ease;
+  transition: background-color 0.3s ease,
+              color 0.3s ease;
 }
 
 a:active {
-  color: #8fbeda;
+  background-color: #8fbeda;
+  color: #0f033f;
 }
 
 .button,
@@ -302,6 +306,8 @@ body.nav-opened .nav-button .icon-menu:after {
 
   a:hover {
     color: #8fbeda;
+    background-color: #8fbeda;
+    color: #0f033f;
   }
 
   .button:hover,
