--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,15 +1,15 @@
 <nav class="nav">
-  <ul>
+  <ul class="nav-site">
     <li class="nav-title">
       <h3>Menu</h3>
     </li>
     {{#foreach navigation}}
       <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation">
-        <a href="{{url absolute="true"}}" class="button">
-          <span>{{label}}</span>
-        </a>
+        <a href="{{url absolute="true"}}" class="button">{{label}}</a>
       </li>
     {{/foreach}}
   </ul>
+
+  <ul class="nav-social"></ul>
 </nav>
 <span class="nav-cover"></span>
