--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,19 +1,26 @@
 {{#foreach posts}}
-<article class="{{post_class}}">
-  <header class="post-header">
-    <section class="post-meta">
-      <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="MMMM Do YYYY"}}</time>
-    </section>
-    <h2 class="post-title">
-      <a href="{{url}}">{{{title}}}</a>
-    </h2>
-  </header>
+  <article class="{{post_class}}">
 
-  <section class="post-excerpt">
-    <p>{{excerpt}}</p>
-  </section>
+    <hr>
 
-  <footer class="post-footer">
-  </footer>
-</article>
+    <div class="vertical-cell"
+      <header class="post-header">
+        <h2 class="post-title">
+          <a href="{{url}}">{{{title}}}</a>
+        </h2>
+      </header>
+
+      <section class="post-excerpt">
+        <p>{{excerpt}}...</p>
+      </section>
+
+      <footer class="post-footer">
+        <section class="post-meta">
+          <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="MMMM Do YYYY"}}</time>
+          on
+          <span class="post-tags">{{tags separator=' and '}}</span>
+        </section>
+      </footer>
+    </div>
+  </article>
 {{/foreach}}
