--- a/post.hbs
+++ b/post.hbs
@@ -1,29 +1,32 @@
 {{!< default}}
 
 <main class="content" role="main">
-
   {{#post}}
   <article class="{{post_class}}">
-    <header class="post-header">
+
       <h1 class="post-title">{{title}}</h1>
-      <section class="post-meta">
-        <p>
-          <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="MMMM Do YYYY"}}</time>
-        </p>
-      </section>
-    </header>
 
-    <hr>
+      <hr>
 
-    <section class="post-content">
+      <div class="vertical-cell">
+        <header class="post-header">
+          <section class="post-meta">
+            <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="MMMM Do YYYY"}}</time>
+          </section>
+        </header>
 
-      {{content}}
+        <section class="post-content">
 
-    </section>
+          {{content}}
 
-    <footer class="post-footer">
-    </footer>
+        </section>
+
+        <footer class="post-footer">
+          <section class="post-meta">
+            On <span class="post-tags">{{tags separator=' and '}}</span>
+          </section>
+        </footer>
+      </div>
   </article>
   {{/post}}
-
 </main>
