--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -15,6 +15,7 @@ h5,
 h6 {
   font-family: 'Bebas Neue Regular', sans-serif;
   text-align: center;
+  margin-top: 0;
 }
 
 hr {
@@ -63,13 +64,16 @@ button:focus {
 
 .site-wrapper {
   min-height: 100%;
+  padding-top: 4em;
 }
 
 .main-nav {
   position: relative;
   z-index: 10;
-  padding: 35px 40px;
-  margin: 0 0 30px 0;
+}
+
+.content {
+  padding: 0 10%;
 }
 
 .site-footer {
@@ -290,13 +294,7 @@ body.nav-opened .nav-button .menu-button:after {
 
 .post {
   position: relative;
-  width: 80%;
-  margin: auto;
   word-wrap: break-word;
-}
-
-.post-title {
-  margin-top: 0;
 }
 
 .post hr {
