--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -151,7 +151,7 @@ body.nav-opened .nav-cover {
   position: fixed;
   top: 0;
   left: 0;
-  right: 200px;
+  right: 150px;
   bottom: 0;
   z-index: 100;
 }
@@ -159,11 +159,11 @@ body.nav-opened .nav-cover {
 .nav {
   position: fixed;
   top: 0;
-  right: -200px;
+  right: -150px;
   bottom: 0;
   z-index: 5;
   height: auto;
-  width: 200px;
+  width: 150px;
   opacity: 0;
   background-color: inherit;
   border-left: 1px solid #8fbeda;
@@ -178,7 +178,7 @@ body.nav-opened .nav {
   opacity: 1;
   transition: transform 0.5s ease,
               opacity 0s ease 0s;
-  transform: translate3D(-200px, 0, 0);
+  transform: translate3D(-150px, 0, 0);
 }
 
 .nav ul {
@@ -238,8 +238,8 @@ body.nav-opened .nav {
 
 .nav-button {
   position: fixed;
-  top: 20px;
-  right: 20px;
+  top: 10px;
+  right: 10px;
   height: 39px;
   width: 39px;
 }
@@ -338,5 +338,23 @@ body.nav-opened .nav-button .menu-button:after {
   button:hover .menu-button:before,
   button:hover .menu-button:after {
     background-color: #0f033f;
+  }
+
+  body.nav-opened .nav-cover {
+    right: 200px;
+  }
+
+  body.nav-opened .nav {
+    transform: translate3D(-200px, 0, 0);
+  }
+
+  .nav {
+    right: -200px;
+    width: 200px;
+  }
+
+  .nav-button {
+    top: 20px;
+    right: 20px;
   }
 }
