--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,7 +1,7 @@
 <nav class="nav">
   <ul class="nav-site">
     <li class="nav-title">
-      <h3>Menu</h3>
+      <a href="/" class="button">Home</a>
     </li>
     {{#foreach navigation}}
       <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation">
