--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -197,7 +197,7 @@ body.nav-opened .nav {
   border: 0;
   color: #8fbeda;
   font-family: 'Bebas Neue Regular', sans-serif;
-  font-size: 1.5em;
+  font-size: 1.75em;
 }
 
 .nav-site li {
@@ -217,7 +217,7 @@ body.nav-opened .nav {
 .nav .nav-social {
   position: absolute;
   bottom: 0;
-  padding: 20px 0;
+  padding: 10px 0;
   border-top: 1px solid #8fbeda;
   text-align: center;
 }
@@ -351,6 +351,10 @@ body.nav-opened .nav-button .menu-button:after {
     padding-top: 20px;
     padding-bottom: 20px;
     font-size: 1.75em;
+  }
+
+  .nav .nav-social {
+    padding: 20px 0;
   }
 
   .nav-button {
