--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -18,6 +18,13 @@ h6 {
   margin-top: 0;
 }
 
+img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
 hr {
   height: 1px;
   background-color: #8fbeda;
