--- a/default.hbs
+++ b/default.hbs
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="{{asset 'components/normalize-css/normalize.css'}}">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Oxygen">
+    <link rel="stylesheet" href="{{asset 'components/highlightjs/styles/mono-blue.css'}}">
     <link rel="stylesheet" href="{{asset 'css/screen.css'}}">
     <link rel="stylesheet" href="{{asset 'css/icons.css'}}">
 
@@ -55,6 +56,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="{{asset 'components/highlightjs/highlight.pack.min.js'}}"></script>
 
     {{ghost_foot}}
 
