--- a/default.hbs
+++ b/default.hbs
@@ -50,7 +50,7 @@
           <a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}
         </section>
         <section class="powered-by">
-          Proudly published with <a href="https://ghost.org">Ghost</a>
+          Published with <a href="https://ghost.org">Ghost</a>
         </section>
       </footer>
     </div>
