Enable Disqus comments

--- a/post.hbs
+++ b/post.hbs
@@ -27,6 +27,11 @@
           </section>
         </footer>
       </div>
+
+      <hr>
+
+      {{> comments}}
+
   </article>
   {{/post}}
 </main>
