--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -92,7 +92,7 @@ button:focus {
 }
 
 .content {
-  padding: 0 10%;
+  padding: 0 5%;
 }
 
 .site-footer {
@@ -386,5 +386,9 @@ body.nav-opened .nav-button .menu-button:after {
   .nav-button {
     top: 20px;
     right: 20px;
+  }
+
+  .content {
+    padding: 0 10%;
   }
 }
